Data parser and calc fixes. Year added. Line chart fixes. Data table overflow hidden style deleted

--- a/src/scripts/Components/Styles/Dashboard.scss
+++ b/src/scripts/Components/Styles/Dashboard.scss
@@ -86,7 +86,6 @@
 
   .dataTable {
     width: 100%;
-    overflow: scroll;
     margin-bottom: 20px;
 
     td {
